force-app/main/default/objects/CSA_VaccineAssessment__c/CSA_VaccineAssessment__c.object-meta.xml
<CustomObject>
    <label>Vaccine Assessment</label>
    <nameField>
        <label>Vaccine Assessment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vaccine Assessments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>