force-app/main/default/objects/CSA_VaccineAssessment__c/fields/Inventory_Level__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Level__c</fullName>
    <label>Inventory Level</label>
    <referenceTo>CSA_ProductInventory__c</referenceTo>
    <relationshipName>Vaccine_Administration</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>